fix: mobile pre code too wide

--- a/assets/scss/partials/components/_post.scss
+++ b/assets/scss/partials/components/_post.scss
@@ -194,7 +194,7 @@
       }
 
       @include conf.mobile {
-        width: calc(100% + 80px);
+        width: calc(100% + 50px);
         left: -30px;
       }
     }
